deployment/overlays/release/deployment-w-storage-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-dev
  namespace: ${OPENSHIFT_NAMESPACE}
spec:
  selector:
    matchLabels:
      app: ${APP_NAME}-dev
  template:
    metadata:
      labels:
        app: ${APP_NAME}-dev
