deployment/overlays/release/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${OPENSHIFT_NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}-dev
