deployment/overlays/release/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${APP_NAME}
  namespace: ${OPENSHIFT_NAMESPACE}
spec:
  to:
    kind: Service
    name: ${APP_NAME}-dev
